# game-01

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-MIT  LICENSE-NONCOMMERCIAL
demo/: CMakeLists.txt
demo/include/fg/demo/: CellStateControl.h  Demo.h  DemoGround.h  MainInputListener.h  MaterialFactory.h  PathState.h  WorldStateControl.h
demo/src/: DemoGround.cpp  main.cpp
doc/: Ground.h  IMPLEMENTATION.cpp  a.cpp
doc/material/: Tiles.material  fragment.glsl  vertex.glsl
framework/: .gitignore  CMakeLists.txt  vcpkg.json
framework/doc/: vcpkg-configuration.json
framework/include/fg/: Actor.h  App.h  BuildingStateManager.h  CameraState.h  Cell.h  CellInstanceManager.h  Config.h  Context.h  Core.h  CoreMod.h  CostMapControl.h  Event.h  EventCenter.h  Game.h  Global.h  Ground.h  HoverCellState.h  IWorld.h  ImGuiApp.h  InputState.h  InventoryStateManager.h  Iterator.h  Listener.h  Master.h  MaterialNames.h  MeshBuild.h  Mod.h  Module.h  MouseCameraController.h  Movable.h  MovableStateManager.h  MoveToCell.h  MoveToCellTask.h  MovingStateManager.h  Options.h  Parameters.h  PathFollow2.h  PathingStateManager.h  Pickable.h  Plane.h  (+17 more)
framework/include/fg/core/: ActorState.h  Building.h  CameraState.h  CellStateBase.h  CostMapGround.h  DispatchInputListener.h  EntityState.h  Event.h  H0085.h  HoverCellController.h  ImGuiAppContext.h  ImGuiAppImpl.h  ImGuiFPSCounter.h  ImGuiInputListener.h  InputStateController.h  MainInputListener.h  ManualState.h  MaterialFactory.h  MissionState.h  MouseCameraController.h  MouseClickPicker.h  MoveToCell.h  MoveToCellTask.h  PathFindTask.h  PathFollow2MissionState.h  PathState.h  SimpleApp.h  SimpleCellGroup.h  SimpleCore.h  SimpleGround.h  SimpleInputState.h  Sinbad.h  TextureFactory.h  Tiles.h  TilesState.h  TilesState2.h  Tower.h  TrackActorByCell.h  TrackActorTask.h
framework/include/fg/demo/: ActorSelectControl.h  ActorStateControl.h  ActorStateControl2.h  CellMarkStateControl.h  CellStateControl.h  DefaultMaster.h  DiamondSquare.h  DiamondSquareMapGenerator.h  EntryController.h  GameTerrain.h  InputStateController.h  Inventory.h  KeepWorld.h  MainInputListener.h  MineralRes.h  ModifyHeightImg.h  Operation.h  PathState.h  Policy.h  WorldState.h  WorldStateControl.h
framework/include/fg/example/: ActorState.h  ActorStateControl.h  Example.h  ExampleGround.h  MainInputListener.h  WorldStateControl.h
framework/include/fg/ui/: ActiveTrayUI.h  BootUI.h  BuildingTrayUI.h  CommandUI.h  EntryUI.h  InventoryUI.h  MainUI.h  OnFrameUI.h  OptionsUI.h  PolicyUI.h  PropertyRefsUI.h  QuitUI.h  SceneNodeUI.h  StatisticUI.h  TasksUI.h  TopBarUI.h  UIState.h  UiModule.h
framework/include/fg/util/: BoolFunctionList.h  CameraUtil.h  CellMark.h  CellUtil.h  CollectionUtil.h  Component.h  CostMap.h  DiamondSquare.h  DrawerUtil.h  HexGridPrinter.h  ImGuiUtil.h  InitContext.h  Iteration.h  OgreCode.h  Plane.h  Polygon2.h  Polyline2.h  Rect.h
framework/src/: Config.cpp  Global.cpp  contexts.cpp  main.cpp
framework/src/core/: CostMapGround.cpp  Ground.cpp  Service.cpp
framework/src/demo/: GameTerrain.cpp
framework/src/util/: HexGridPrinter.cpp  LicenseUtil.cpp
game/: CMakeLists.txt
game/config/: fog.cfg
game/include/fg/game/: Game01.h  OnFrameUI.h
game/src/: main.cpp
tools/: CMakeLists.txt
tools/src/: main.cpp
